--- a/Modern_Portfolio_Theory.ipynb
+++ b/Modern_Portfolio_Theory.ipynb
@@ -968,7 +968,7 @@
       "cell_type": "markdown",
       "source": [
         "# **What if investors are allowed to take short positions on stocks?**\n",
-        "In MPT theory, we assume that investors only take long positions in stocks. However, this is not true in real-life situations where investors can also take short positions. Now, we are going to implement MPT theory in a scenario where investors can take both long and short positions in stocks."
+        "In the above example, we assume that investors only take long positions in stocks. However, this is not true in real-life situations where investors can also take short positions. Now, we are going to implement MPT theory in a scenario where investors can take both long and short positions in stocks."
       ],
       "metadata": {
         "id": "Hi6io_nhat4d"
